# python-cmd-playground

./: mycmd.py  mycmd2.py  pyproject.toml
